--- a/packages/cubejs-jdbc-driver/package.json
+++ b/packages/cubejs-jdbc-driver/package.json
@@ -11,8 +11,21 @@
   "engines": {
     "node": ">=10.8.0"
   },
-  "main": "driver/JDBCDriver.js",
+  "main": "index.js",
+  "typings": "dist/src/index.d.ts",
+  "scripts": {
+    "build": "rm -rf dist && npm run tsc",
+    "tsc": "tsc",
+    "watch": "tsc -w",
+    "lint": "eslint src/* --ext .ts",
+    "lint:fix": "eslint --fix src/* --ext .ts"
+  },
+  "files": [
+    "dist/src",
+    "index.js"
+  ],
   "dependencies": {
+    "@cubejs-backend/linter": "^0.26.54",
     "@cubejs-backend/query-orchestrator": "^0.26.69",
     "generic-pool": "^3.1.7",
     "sqlstring": "^2.3.0"
@@ -21,5 +34,17 @@
     "jdbc": "^0.7.2",
     "node-java-maven": "^0.1.1"
   },
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "eslintConfig": {
+    "extends": "../cubejs-linter"
+  },
+  "jest": {
+    "testEnvironment": "node"
+  },
+  "devDependencies": {
+    "@types/generic-pool": "^3.1.9",
+    "@types/node": "^10.17.55",
+    "@types/sqlstring": "^2.3.0",
+    "typescript": "~4.1.5"
+  }
 }
