--- a/packages/cubejs-playground/package.json
+++ b/packages/cubejs-playground/package.json
@@ -60,9 +60,10 @@
   "proxy": "http://localhost:4000",
   "license": "MIT",
   "peerDependencies": {
-    "antd": "^4.13.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "antd": ">=4.13.0",
+    "react": ">=17.0.1",
+    "react-dom": ">=17.0.1",
+    "styled-components": ">=5.2.0"
   },
   "devDependencies": {
     "@ant-design/compatible": "^1.0.2",
