--- a/packages/cubejs-templates/package.json
+++ b/packages/cubejs-templates/package.json
@@ -13,7 +13,7 @@
     "build": "rm -rf dist && npm run tsc",
     "tsc": "tsc",
     "watch": "tsc -w",
-    "lint": "eslint --debug src/* --ext .ts",
+    "lint": "eslint src/* --ext .ts",
     "lint:fix": "eslint --fix src/* --ext .ts"
   },
   "files": [
@@ -26,6 +26,7 @@
     "extends": "../cubejs-linter"
   },
   "dependencies": {
+    "cross-spawn": "^7.0.3",
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "fs-extra": "^9.1.0",
