--- a/packages/cubejs-server/package.json
+++ b/packages/cubejs-server/package.json
@@ -21,8 +21,8 @@
     "/oclif.manifest.json"
   ],
   "bin": {
-    "cubejs-server": "./bin/server",
-    "cubejs-dev-server": "./bin/dev-server"
+    "cubejs-dev-server": "./bin/dev-server",
+    "cubejs-server": "./bin/server"
   },
   "cubejsCliVersion": ">=0.22",
   "scripts": {
