--- a/js/jdbc/package.json
+++ b/js/jdbc/package.json
@@ -17,7 +17,7 @@
   },
   "author": "Cube Dev, Inc.",
   "dependencies": {
-    "cubejs-core-workspace": "*"
+    "packages": "*"
   },
   "files": [
     "src",
